--- a/templates/index.html
+++ b/templates/index.html
@@ -119,64 +119,74 @@
 </head>
 <body>
 {% if session.session_string %}
-<div class="container">
-    <p class="success">
-        Скопируйте команду кнопкой ниже <br>
-        В нём содержится ваш токен, не показывайте команду другим людям! <br>
-        Вставьте эту команду в нашего бота
-    </p>
-    <button class="btn" onclick="copySessionString()"> Скопировать команду</button>
-</div>
+    <div class="container">
+        <div class="title">Tassistant Provider</div>
+        <div class="warning">
+            Внимание: Сайт и бот Tassistant Provider не имеют никакого отношения к приложению или сервису Telegram.
+            Передавая данные от аккаунта, вы соглашаетесь с правилами использования продукта и не имеете никаких
+            претензий к
+            самому Telegram.
+        </div>
+        <p class="success">
+            Скопируйте команду кнопкой ниже <br>
+            В нём содержится ваш токен, не показывайте команду другим людям! <br>
+            Вставьте эту команду в нашего бота
+        </p>
+        <button class="btn" onclick="copySessionString()"> Скопировать команду</button>
+
+        <button class="btn" style="margin-top: 10px" id="clearSessionBtn" onclick="clearSession()">Удалить сессию</button>
+    </div>
 {% else %}
 
-<div class="container">
-    <!-- Заголовок -->
-    <div class="title">Tassistant Provider</div>
+    <div class="container">
+        <!-- Заголовок -->
+        <div class="title">Tassistant Provider</div>
 
-    <!-- Предупреждение -->
-    <div class="warning">
-        Внимание: Сайт и бот Tassistant Provider не имеют никакого отношения к приложению или сервису Telegram.
-        Передавая данные от аккаунта, вы соглашаетесь с правилами использования продукта и не имеете никаких претензий к
-        самому Telegram.
+        <!-- Предупреждение -->
+        <div class="warning">
+            Внимание: Сайт и бот Tassistant Provider не имеют никакого отношения к приложению или сервису Telegram.
+            Передавая данные от аккаунта, вы соглашаетесь с правилами использования продукта и не имеете никаких
+            претензий к
+            самому Telegram.
+        </div>
+
+        <p class="error-message">{{ error }}</p>
+
+
+        <!-- Форма для ввода номера телефона -->
+        <form method="POST" action="/">
+
+            <input type="hidden" name="step" value="{{ step }}">
+
+            <div id="step-1" class="step {{ 'active' if step == 1 else '' }}">
+                <div class="form-group">
+                    <label for="phone">Введите номер телефона:</label>
+                    <input type="tel" name="phone" id="phone" placeholder="+7 123 456 7890">
+                </div>
+                <button class="btn" type="submit">Отправить код</button>
+            </div>
+
+            <!-- Форма для ввода кода -->
+            <div id="step-2" class="step {{ 'active' if step == 2 else '' }}">
+                <div class="form-group">
+                    <label for="code">Введите код из Telegram:</label>
+                    <input type="text" name="code" id="code" placeholder="Введите код">
+                </div>
+                <button class="btn" type="submit">Подтвердить код</button>
+                <span class="back-btn" onclick="previousStep(1)">Назад</span>
+            </div>
+
+            <!-- Форма для ввода 2FA пароля -->
+            <div id="step-3" class="step {{ 'active' if step == 3 else '' }}">
+                <div class="form-group">
+                    <label for="2fa">Введите 2FA пароль:</label>
+                    <input type="password" name="2fa" id="2fa" placeholder="Введите 2FA пароль">
+                </div>
+                <button class="btn" type="submit">Войти</button>
+                <span class="back-btn" onclick="previousStep(2)">Назад</span>
+            </div>
+        </form>
     </div>
-
-    <p class="error-message">{{ error }}</p>
-
-
-    <!-- Форма для ввода номера телефона -->
-    <form method="POST" action="/">
-
-        <input type="hidden" name="step" value="{{ step }}">
-
-        <div id="step-1" class="step {{ 'active' if step == 1 else '' }}">
-            <div class="form-group">
-                <label for="phone">Введите номер телефона:</label>
-                <input type="tel" name="phone" id="phone" placeholder="+7 123 456 7890">
-            </div>
-            <button class="btn" type="submit">Отправить код</button>
-        </div>
-
-        <!-- Форма для ввода кода -->
-        <div id="step-2" class="step {{ 'active' if step == 2 else '' }}">
-            <div class="form-group">
-                <label for="code">Введите код из Telegram:</label>
-                <input type="text" name="code" id="code" placeholder="Введите код">
-            </div>
-            <button class="btn" type="submit">Подтвердить код</button>
-            <span class="back-btn" onclick="previousStep(1)">Назад</span>
-        </div>
-
-        <!-- Форма для ввода 2FA пароля -->
-        <div id="step-3" class="step {{ 'active' if step == 3 else '' }}">
-            <div class="form-group">
-                <label for="2fa">Введите 2FA пароль:</label>
-                <input type="password" name="2fa" id="2fa" placeholder="Введите 2FA пароль">
-            </div>
-            <button class="btn" type="submit">Войти</button>
-            <span class="back-btn" onclick="previousStep(2)">Назад</span>
-        </div>
-    </form>
-</div>
 {% endif %}
 
 
@@ -187,15 +197,38 @@
     }
 
     function previousStep(step) {
-        document.querySelector('.step.active').classList.remove('active');
-        document.getElementById('step-' + step).classList.add('active');
+        fetch('/set_step', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({step: step})
+        }).then(response => {
+            if (response.ok) {
+                window.location.reload();
+            }
+        });
     }
+
+    function clearSession() {
+        fetch('/clear_session', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        }).then(response => {
+            if (response.ok) {
+                window.location.reload();
+            }
+        });
+    }
+
 
     {% if session.session_string %}
 
-    function copySessionString () {
-        navigator.clipboard.writeText("/привязать {{ session.session_string }}")
-    }
+        function copySessionString() {
+            navigator.clipboard.writeText("/привязать {{ session.session_string }}")
+        }
 
     {% endif %}
 </script>
